--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -52,36 +51,39 @@
                 <nav id="site-navigation" class="main-navigation">
                     <ul id="primary-menu" class="menu alt-font">
                         <li class="has-children">
-                        <a href="#" class="on-page"><span data-background-text="Short films">Short films</span></a>
+                        <a href="index.html" class="on-page"><span data-background-text="Animation">Animation</span></a>
                             <ul>
                                 <li><a href="explainers.html">Explainers</a></li>
-                                <li><a href="campaigns.html">Campaigns</a></li>
+                                <li><a href="index-alt.html">Feature films</a></li>
+                                <li><a href="index-alt.html">TV Series</a></li>
                             </ul>
                         </li>
                         <li class="has-children">
-                            <a href="#" class="on-page"><span data-background-text="Feature films">Feature films</span></a>
+                            <a href="index.html" class="on-page"><span data-background-text="Cinematography">Cinematography</span></a>
                             <ul>
-                                <li><a href="gammy.html">Gammy</a></li>
+                                <li><a href="gammy.html">Short films</a></li>
+                                <li><a href="gammy.html">Feature films</a></li>
+                                <li><a href="gammy.html">TV series</a></li>
                             </ul>
                         </li>
                         <li class="has-children">
-                            <a href="#" class="on-page"><span data-background-text="Tv series">Tv series</span></a>
+                            <a href="index.html" class="on-page"><span data-background-text="Technology">Technology</span></a>
                             <ul>
-                                <li><a href="cluckstars.html">Cluckstars</a></li>
-                                <li><a href="bubblies.html">Bubblies</a></li>
+                                <li><a href="index.html">Render farm</a></li>
+                                <li><a href="index.html">Motion Capture</a></li>
                             </ul>
                         </li>
-                        <li class="has-children">
-                            <a href="#" class="on-page"><span data-background-text="Documentaries">Documentaries</span></a>
+                        <!-- <li class="has-children">
+                            <a href="index.html" class="on-page"><span data-background-text="Documentaries">Documentaries</span></a>
                             <ul>
-                                <li><a href="asiwaju.html">Asiwaju</a></li>
+                                <li><a href="index.html">Asiwaju</a></li>
                             </ul>
-                        </li>
-                        <li class="active">
+                        </li> -->
+                        <li>
                         <a href="about.html"><span data-background-text="ABOUT">About</span></a>
                         </li>
                     </ul>
-                </nav>
+                    </nav>
         <!-- mobile navigation -->
         <nav id="mobile-navigation" class="alt-font">
         </nav>
