--- a/asiwaju.html
+++ b/asiwaju.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <!-- Website Title
     ======================================= -->
-<title>Noyre - A modern HTML template.</title>
+<title>Utricle  - Animation Studio</title>
 <meta name="description" content="Premium HTML5 template by Go Themes."/>
 <meta name="keywords" content=""/>
 <meta name="author" content="humans.html">
@@ -52,36 +52,39 @@
                 <nav id="site-navigation" class="main-navigation">
                     <ul id="primary-menu" class="menu alt-font">
                         <li class="has-children">
-                        <a href="#" class="on-page"><span data-background-text="Short films">Short films</span></a>
+                        <a href="index.html" class="on-page"><span data-background-text="Animation">Animation</span></a>
                             <ul>
-                                <li class="active"><a href="explainers.html">Explainers</a></li>
-                                <li><a href="campaigns.html">Campaigns</a></li>
+                                <li><a href="explainers.html">Explainers</a></li>
+                                <li><a href="index-alt.html">Feature films</a></li>
+                                <li><a href="index-alt.html">TV Series</a></li>
                             </ul>
                         </li>
                         <li class="has-children">
-                            <a href="#" class="on-page"><span data-background-text="Feature films">Feature films</span></a>
+                            <a href="index.html" class="on-page"><span data-background-text="Cinematography">Cinematography</span></a>
                             <ul>
-                                <li><a href="gammy.html">Gammy</a></li>
+                                <li><a href="gammy.html">Short films</a></li>
+                                <li><a href="gammy.html">Feature films</a></li>
+                                <li><a href="gammy.html">TV series</a></li>
                             </ul>
                         </li>
                         <li class="has-children">
-                            <a href="#" class="on-page"><span data-background-text="Tv series">Tv series</span></a>
+                            <a href="index.html" class="on-page"><span data-background-text="Technology">Technology</span></a>
                             <ul>
-                                <li><a href="cluckstars.html">Cluckstars</a></li>
-                                <li><a href="bubblies.html">Bubblies</a></li>
+                                <li><a href="index.html">Render farm</a></li>
+                                <li><a href="index.html">Motion Capture</a></li>
                             </ul>
                         </li>
-                        <li class="has-children">
-                            <a href="#" class="on-page"><span data-background-text="Documentaries">Documentaries</span></a>
+                        <!-- <li class="has-children">
+                            <a href="index.html" class="on-page"><span data-background-text="Documentaries">Documentaries</span></a>
                             <ul>
-                                <li><a href="asiwaju.html">Asiwaju</a></li>
+                                <li><a href="index.html">Asiwaju</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                         <li>
                         <a href="about.html"><span data-background-text="ABOUT">About</span></a>
                         </li>
                     </ul>
-                </nav>
+                    </nav>
         <!-- mobile navigation -->
         <nav id="mobile-navigation" class="alt-font">
         </nav>
