--- a/features.html
+++ b/features.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <!-- Website Title
     ======================================= -->
-<title>Noyre - A modern HTML template.</title>
+<title>Utricle  - Animation Studio</title>
 <meta name="description" content="Premium HTML5 template by Go Themes."/>
 <meta name="keywords" content=""/>
 <meta name="author" content="humans.html">
@@ -48,45 +48,42 @@
         </div>
         <!-- MAIN NAVIGATION
                 ======================================= -->
-        <nav id="site-navigation" class="main-navigation">
-        <ul id="primary-menu" class="menu alt-font">
-            <li class="has-children">
-            <a href="index-2.html" class="on-page"><span data-background-text="Home">Home</span></a>
-            <ul>
-                <li><a href="index-2.html">Home Main</a></li>
-                <li><a href="index-alt.html">Alternate</a></li>
-                <li><a href="index-hero-slider.html">Slideshow</a></li>
-            </ul>
-            </li>
-            <li>
-            <a href="index-2.html#work"><span data-background-text="work">Work</span></a>
-            </li>
-            <li>
-            <a href="index-2.html#about"><span data-background-text="about">About</span></a>
-            </li>
-            <li>
-            <a href="index-2.html#services"><span data-background-text="services">Services</span></a>
-            </li>
-            <li>
-            <a href="index-2.html#pricing"><span data-background-text="pricing">Pricing</span></a>
-            </li>
-            <li class="has-children">
-            <a href="#blog" class="on-page"><span data-background-text="Blog">Blog</span></a>
-            <ul>
-                <li><a href="blog.html">Blog Archive</a></li>
-                <li><a href="blog-single.html">Single</a></li>
-                <li><a href="blog-single-gallery-format.html">Single Gallery Format</a></li>
-                <li><a href="blog-single-video-format.html">Single Video Format</a></li>
-            </ul>
-            </li>
-            <li>
-            <a href="#contact" class="on-page"><span data-background-text="Contact">Contact</span></a>
-            </li>
-            <li class="active">
-            <a href="features.html"><span data-background-text="Features">Features</span></a>
-            </li>
-        </ul>
-        </nav>
+                <nav id="site-navigation" class="main-navigation">
+                    <ul id="primary-menu" class="menu alt-font">
+                        <li class="has-children">
+                        <a href="index.html" class="on-page"><span data-background-text="Animation">Animation</span></a>
+                            <ul>
+                                <li><a href="explainers.html">Explainers</a></li>
+                                <li><a href="index-alt.html">Feature films</a></li>
+                                <li><a href="index-alt.html">TV Series</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-children">
+                            <a href="index.html" class="on-page"><span data-background-text="Cinematography">Cinematography</span></a>
+                            <ul>
+                                <li><a href="gammy.html">Short films</a></li>
+                                <li><a href="gammy.html">Feature films</a></li>
+                                <li><a href="gammy.html">TV series</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-children">
+                            <a href="index.html" class="on-page"><span data-background-text="Technology">Technology</span></a>
+                            <ul>
+                                <li><a href="index.html">Render farm</a></li>
+                                <li><a href="index.html">Motion Capture</a></li>
+                            </ul>
+                        </li>
+                        <!-- <li class="has-children">
+                            <a href="index.html" class="on-page"><span data-background-text="Documentaries">Documentaries</span></a>
+                            <ul>
+                                <li><a href="index.html">Asiwaju</a></li>
+                            </ul>
+                        </li> -->
+                        <li>
+                        <a href="about.html"><span data-background-text="ABOUT">About</span></a>
+                        </li>
+                    </ul>
+                    </nav>
         <!-- mobile navigation -->
         <nav id="mobile-navigation" class="alt-font">
         </nav>
