--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <!-- Website Title
     ======================================= -->
-<title>Noyre - A modern HTML template.</title>
+<title>Utricle  - Animation Studio</title>
 <meta name="description" content="Premium HTML5 template by Go Themes."/>
 <meta name="keywords" content=""/>
 <meta name="author" content="humans.html">
@@ -51,31 +51,34 @@
         <nav id="site-navigation" class="main-navigation">
         <ul id="primary-menu" class="menu alt-font">
             <li class="has-children">
-            <a href="index.html" class="on-page"><span data-background-text="Short films">Short films</span></a>
+            <a href="index.html" class="on-page"><span data-background-text="Animation">Animation</span></a>
                 <ul>
                     <li><a href="explainers.html">Explainers</a></li>
-                    <li><a href="index-alt.html">Campaigns</a></li>
+                    <li><a href="index-alt.html">Feature films</a></li>
+                    <li><a href="index-alt.html">TV Series</a></li>
                 </ul>
             </li>
             <li class="has-children">
-                <a href="index.html" class="on-page"><span data-background-text="Feature films">Feature films</span></a>
+                <a href="index.html" class="on-page"><span data-background-text="Cinematography">Cinematography</span></a>
                 <ul>
-                    <li><a href="gammy.html">Gammy</a></li>
+                    <li><a href="gammy.html">Short films</a></li>
+                    <li><a href="gammy.html">Feature films</a></li>
+                    <li><a href="gammy.html">TV series</a></li>
                 </ul>
             </li>
             <li class="has-children">
-                <a href="index.html" class="on-page"><span data-background-text="Tv series">Tv series</span></a>
+                <a href="index.html" class="on-page"><span data-background-text="Technology">Technology</span></a>
                 <ul>
-                    <li><a href="index.html">Cluckstars</a></li>
-                    <li><a href="index.html">Bubblies</a></li>
+                    <li><a href="index.html">Render farm</a></li>
+                    <li><a href="index.html">Motion Capture</a></li>
                 </ul>
             </li>
-            <li class="has-children">
+            <!-- <li class="has-children">
                 <a href="index.html" class="on-page"><span data-background-text="Documentaries">Documentaries</span></a>
                 <ul>
                     <li><a href="index.html">Asiwaju</a></li>
                 </ul>
-            </li>
+            </li> -->
             <li>
             <a href="about.html"><span data-background-text="ABOUT">About</span></a>
             </li>
@@ -93,37 +96,68 @@
         <div class="site-page">
             <!-- Fullscreen Hero
                 ======================================= -->
-            <div class="image-bg h-100vh d-flex">
-                <!-- hero caption -->
-                <div class="container align-self-center dark-bg">
-                    <div class="section-title text-center">
-                        <h3 class="title uppercase primary-outline display-3" data-aos="fade-down" data-aos-delay="100">UTRICLE STUDIOS</h3>
-                        <h2 class="title uppercase font-weight-700 text-lg" data-aos="fade-in">ANIMATION STUDIO</h2>
-                        <p data-aos="fade-up" data-aos-delay="200">
-                            Utricle studio is telling the African story in a more compelling way, thereby promoting Nigeria’s rich cultural values, heritage, and culture.
-                        </p>
-                        <!-- <a href="#" class="open-contact gt-btn primary-btn alt-font js-tilt"><span class="uppercase">Get in touch</span></a> -->
+            <div class="h-100vh black-bg">
+            <div id="slides" class="hero-slider gt-carousel owl-carousel">
+                <!-- first slide -->
+                <div class="image-bg h-100vh d-flex">
+                    <!-- caption -->
+                    <div class="slide-caption container container-lg align-self-center dark-bg">
+                        <div class="section-title text-center">
+                            <h3 class="title uppercase primary-outline display-3 fade-in1">UTRICLE STUDIOS</h3>
+                            <h2 class="title uppercase font-weight-700 text-lg fade-in2">Animation Studio</h2>
+                            <p class="fade-in3">
+                                Utricle studio is telling the African story in a more compelling way, thereby promoting Nigeria’s rich cultural values, heritage, and culture.
+                            </p>
+                            <!-- <a href="#" class="open-contact gt-btn primary-btn alt-font js-tilt"><span class="uppercase">Get in touch</span></a> -->
+                        </div>
                     </div>
+                    <!-- background image -->
+                    <div class="bg-image animate-filters" style="background-image:url(preview/gammy1.png);">
+                    </div>
+                    <!-- color overlay -->
+                    <div class="image-overlay" style="background-color:rgba(0,0,0,0.85)"></div>
                 </div>
-                <!-- scroll to first section -->
-                <a href="#work" class="on-page" id="scroll-to-content">
-                <svg viewbox="264.7342657342658 144.33146853146852 24 47.200000000000074" width="20" height="43.2">
-                <defs>
-                <path d="M285.73 178.53L284.34 177.1L276.73 184.7L276.73 145.33L274.73 145.33L274.73 184.7L267.15 177.12C266.3 177.97 265.83 178.44 265.73 178.53C269.4 182.19 272.23 185.03 275.73 188.53C276.4 187.86 279.73 184.53 285.73 178.53" id="b1mqNkTkMW"></path>
-                </defs>
-                <g>
-                <g>
-                <use xlink:href="#b1mqNkTkMW" opacity="1" fill="#ffffff" fill-opacity="1"></use>
-                </g>
-                </g>
-                </svg>
-                </a>
-                <!-- background image -->
-                <div class="bg-image animate-filters" style="background-image:url(preview/home-hero-image.png)">
+                
+                <!-- second slide -->
+                <div class="image-bg h-100vh d-flex">
+                    <!-- caption -->
+                    <div class="slide-caption container container-lg align-self-center dark-bg">
+                        <div class="section-title text-center">
+                            <h3 class="title uppercase dark-fill primary-el-bg display-4 mb-0 fade-in1">Cluckstars</h3>
+                            <h2 class="title uppercase font-weight-700 fade-in2">TV Series</h2> 
+                            <p class="fade-in3">
+                                Eos partiendo consulatu te, an cum idque incorrupte. Homero tritani voluptaria nec no.
+                            </p>
+                            <!-- <a href="#" class="open-contact gt-btn primary-btn alt-font js-tilt"><span class="uppercase">Get in touch</span></a> -->
+                        </div>
+                    </div>
+                    <!-- background image -->
+                    <div class="bg-image animate-filters" style="background-image:url(preview/gammy3.jpg);">
+                    </div>
+                    <!-- color overlay -->
+                    <div class="image-overlay" style="background-color:rgba(0,0,0,0.85)"></div>
                 </div>
-                <!-- color overlay -->
-                <div class="image-overlay gradient-overlay-tb">
-                </div>
+                
+                <!-- third slide -->
+                <div class="image-bg h-100vh d-flex">
+                    <!-- caption -->
+                    <div class="slide-caption container container-lg align-self-center dark-bg">
+                        <div class="section-title text-center">
+                            <h3 class="title uppercase dark-fill primary-el-bg display-4 mb-0 fade-in1">BUBBLIES</h3>
+                            <h2 class="title uppercase font-weight-700 fade-in2">Coming Soon</h2>
+                            <p class="fade-in3">
+                                Ad utamur vituperatoribus nam. Porro laboramus quo no. Ne ipsum omittam eligendi mea. Quo eius posse ea, vis et docendi scaevola nominati, id eam populo eloquentiam.
+                            </p>
+                            <!-- <a href="#" class="open-contact gt-btn primary-btn alt-font js-tilt"><span class="uppercase">Get in touch</span></a> -->
+                        </div>
+                    </div>
+                    <!-- background image -->
+                    <div class="bg-image" style="background-image:url(preview/gammy2.png);">
+                    </div>
+                    <!-- color overlay -->
+                    <div class="image-overlay" style="background-color:rgba(0,0,0,0.85)"></div>
+                </div>            
+            </div>
             </div>
             <!-- Container Content
                 ======================================= -->
@@ -131,13 +165,13 @@
             <div id="work" class="page-section black-bg dark-bg p-medium">
                 <div class="container">
                     <!-- section title -->
-                    <div class="section-title">
-                        <h5 class="sub-title uppercase dark-fill primary-el-bg" data-aos="fade-right">Creating Quality since 86</h5>
+                    <!-- <div class="section-title">
+                        <h5 class="sub-title uppercase dark-fill primary-el-bg" data-aos="fade-right">QUALITY</h5>
                         <h2 class="title uppercase font-weight-700" data-aos="fade-in">Our Latest Work</h2>
                         <p>
                             Dolor sit amet ipsum dolor sit amet, consectetuer. Suspendisse urna nibh, viverra non, semper. Lorem ipsum dolor sit amet, consectetuer.
                         </p>
-                    </div>
+                    </div> -->
                     <div class="lg-clear-10">
                     </div>
                     <!-- portfolio filters -->
